build/log/idf_py_stdout_output_76742
[1/11] Performing build step for 'bootloader'
[1/1] cd /home/razvan/Coding/EspProjects/Licenta/testLicenta/build/bootloader/esp-idf/esptool_py && /home/razvan/.espressif/python_env/idf5.0_py3.8_env/bin/python /home/razvan/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/razvan/Coding/EspProjects/Licenta/testLicenta/build/bootloader/bootloader.bin
Bootloader binary size 0x4ee0 bytes. 0x3120 bytes (38%) free.
[2/9] Building C object esp-idf/lora/CMakeFiles/__idf_lora.dir/lora.c.obj
FAILED: esp-idf/lora/CMakeFiles/__idf_lora.dir/lora.c.obj 
/home/razvan/.espressif/tools/riscv32-esp-elf/esp-2022r1-11.2.0/riscv32-esp-elf/bin/riscv32-esp-elf-gcc  -I/home/razvan/Coding/EspProjects/Licenta/testLicenta/build/config -I/home/razvan/Coding/EspProjects/Licenta/testLicenta/components/lora -I/home/razvan/esp/esp-idf/components/newlib/platform_include -I/home/razvan/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/razvan/esp/esp-idf/components/freertos/esp_additions/include/freertos -I/home/razvan/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include -I/home/razvan/esp/esp-idf/components/freertos/esp_additions/include -I/home/razvan/esp/esp-idf/components/esp_hw_support/include -I/home/razvan/esp/esp-idf/components/esp_hw_support/include/soc -I/home/razvan/esp/esp-idf/components/esp_hw_support/include/soc/esp32c3 -I/home/razvan/esp/esp-idf/components/esp_hw_support/port/esp32c3/. -I/home/razvan/esp/esp-idf/components/esp_hw_support/port/esp32c3/private_include -I/home/razvan/esp/esp-idf/components/heap/include -I/home/razvan/esp/esp-idf/components/log/include -I/home/razvan/esp/esp-idf/components/soc/include -I/home/razvan/esp/esp-idf/components/soc/esp32c3/. -I/home/razvan/esp/esp-idf/components/soc/esp32c3/include -I/home/razvan/esp/esp-idf/components/hal/esp32c3/include -I/home/razvan/esp/esp-idf/components/hal/include -I/home/razvan/esp/esp-idf/components/hal/platform_port/include -I/home/razvan/esp/esp-idf/components/esp_rom/include -I/home/razvan/esp/esp-idf/components/esp_rom/include/esp32c3 -I/home/razvan/esp/esp-idf/components/esp_rom/esp32c3 -I/home/razvan/esp/esp-idf/components/esp_common/include -I/home/razvan/esp/esp-idf/components/esp_system/include -I/home/razvan/esp/esp-idf/components/esp_system/port/soc -I/home/razvan/esp/esp-idf/components/esp_system/port/include/riscv -I/home/razvan/esp/esp-idf/components/esp_system/port/include/private -I/home/razvan/esp/esp-idf/components/riscv/include -I/home/razvan/esp/esp-idf/components/lwip/include -I/home/razvan/esp/esp-idf/components/lwip/include/apps -I/home/razvan/esp/esp-idf/components/lwip/include/apps/sntp -I/home/razvan/esp/esp-idf/components/lwip/lwip/src/include -I/home/razvan/esp/esp-idf/components/lwip/port/esp32/include -I/home/razvan/esp/esp-idf/components/lwip/port/esp32/include/arch -I/home/razvan/esp/esp-idf/components/driver/include -I/home/razvan/esp/esp-idf/components/driver/deprecated -I/home/razvan/esp/esp-idf/components/esp_pm/include -I/home/razvan/esp/esp-idf/components/esp_ringbuf/include -march=rv32imc  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -nostartfiles -Og -fmacro-prefix-map=/home/razvan/Coding/EspProjects/Licenta/testLicenta=. -fmacro-prefix-map=/home/razvan/esp/esp-idf=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"v5.0.1-dirty\" -DESP_PLATFORM -D_POSIX_READER_WRITER_LOCKS -MD -MT esp-idf/lora/CMakeFiles/__idf_lora.dir/lora.c.obj -MF esp-idf/lora/CMakeFiles/__idf_lora.dir/lora.c.obj.d -o esp-idf/lora/CMakeFiles/__idf_lora.dir/lora.c.obj -c /home/razvan/Coding/EspProjects/Licenta/testLicenta/components/lora/lora.c
/home/razvan/Coding/EspProjects/Licenta/testLicenta/components/lora/lora.c:93:20: error: redeclaration of enumerator 'FhssChangeChannel'
   93 | enum DIO2modeEnum {FhssChangeChannel=0} DIO2mode;
      |                    ^~~~~~~~~~~~~~~~~
/home/razvan/Coding/EspProjects/Licenta/testLicenta/components/lora/lora.c:92:32: note: previous definition of 'FhssChangeChannel' with type 'enum DIO1modeEnum'
   92 | enum DIO1modeEnum {RxTimeout=0,FhssChangeChannel=1,CadDetected=2} DIO1mode;
      |                                ^~~~~~~~~~~~~~~~~
/home/razvan/Coding/EspProjects/Licenta/testLicenta/components/lora/lora.c:94:20: error: redeclaration of enumerator 'CadDone'
   94 | enum DIO3modeEnum {CadDone=0,ValidHeader=1,CrcError=2} DIO3mode;
      |                    ^~~~~~~
/home/razvan/Coding/EspProjects/Licenta/testLicenta/components/lora/lora.c:91:38: note: previous definition of 'CadDone' with type 'enum DIO0modeEnum'
   91 | enum DIO0modeEnum {RxDone=0,Txdone=1,CadDone=2} DIO0mode;
      |                                      ^~~~~~~
/home/razvan/Coding/EspProjects/Licenta/testLicenta/components/lora/lora.c:95:20: error: redeclaration of enumerator 'CadDetected'
   95 | enum DIO4modeEnum {CadDetected=0,PllLock=1} DIO4mode;
      |                    ^~~~~~~~~~~
/home/razvan/Coding/EspProjects/Licenta/testLicenta/components/lora/lora.c:92:52: note: previous definition of 'CadDetected' with type 'enum DIO1modeEnum'
   92 | enum DIO1modeEnum {RxTimeout=0,FhssChangeChannel=1,CadDetected=2} DIO1mode;
      |                                                    ^~~~~~~~~~~
/home/razvan/Coding/EspProjects/Licenta/testLicenta/components/lora/lora.c: In function 'setDIO':
/home/razvan/Coding/EspProjects/Licenta/testLicenta/components/lora/lora.c:99:4: error: implicit declaration of function 'lora_idle' [-Werror=implicit-function-declaration]
   99 |    lora_idle();
      |    ^~~~~~~~~
/home/razvan/Coding/EspProjects/Licenta/testLicenta/components/lora/lora.c:100:4: error: implicit declaration of function 'lora_write_reg' [-Werror=implicit-function-declaration]
  100 |    lora_write_reg(REG_DIO_MAPPING_1,(DIO0mode<<6)|(DIO1mode<<4)|(DIO2mode<<2)|(DIO3mode));
      |    ^~~~~~~~~~~~~~
/home/razvan/Coding/EspProjects/Licenta/testLicenta/components/lora/lora.c: At top level:
/home/razvan/Coding/EspProjects/Licenta/testLicenta/components/lora/lora.c:163:6: warning: conflicting types for 'lora_write_reg'; have 'void(int,  int)'
  163 | void lora_write_reg(int reg, int val)
      |      ^~~~~~~~~~~~~~
/home/razvan/Coding/EspProjects/Licenta/testLicenta/components/lora/lora.c:100:4: note: previous implicit declaration of 'lora_write_reg' with type 'void(int,  int)'
  100 |    lora_write_reg(REG_DIO_MAPPING_1,(DIO0mode<<6)|(DIO1mode<<4)|(DIO2mode<<2)|(DIO3mode));
      |    ^~~~~~~~~~~~~~
/home/razvan/Coding/EspProjects/Licenta/testLicenta/components/lora/lora.c:266:6: warning: conflicting types for 'lora_idle'; have 'void(void)'
  266 | void lora_idle(void)
      |      ^~~~~~~~~
/home/razvan/Coding/EspProjects/Licenta/testLicenta/components/lora/lora.c:99:4: note: previous implicit declaration of 'lora_idle' with type 'void(void)'
   99 |    lora_idle();
      |    ^~~~~~~~~
cc1: some warnings being treated as errors
ninja: build stopped: subcommand failed.
